hphp/test/zend/good/ext/pdo_sqlite/tests/bug52487.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('pdo_sqlite')) print 'skip not loaded';
}
